--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ fastapi = "^0.115.2"
 uvicorn = "^0.32.0"
 httpx = "^0.27.2"
 tenacity = "^9.0.0"
+python-json-logger = "^2.0.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
