--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ httpx = "^0.27.2"
 tenacity = "^9.0.0"
 python-json-logger = "^2.0.7"
 boto3 = "^1.35.46"
+ddtrace = "^2.14.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
