--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ tenacity = "^9.0.0"
 python-json-logger = "^2.0.7"
 boto3 = "^1.35.46"
 ddtrace = "^2.14.4"
+xmltodict = "^0.14.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
