--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ fastapi = "^0.115.2"
 uvicorn = "^0.32.0"
 httpx = "^0.27.2"
 tenacity = "^9.0.0"
-python-json-logger = "^2.0.7"
-boto3 = "^1.35.46"
-ddtrace = "^2.14.4"
+boto3 = "^1.35.36"
+aioboto3 = "^13.2.0"
 xmltodict = "^0.14.2"
+ddtrace = "^2.14.4"
+frozenlist = "1.4.1"
+python-json-logger = "^2.0.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
