--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-json-logger = "^2.0.7"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.9"
+pytest = "^8.3.3"
 
 [tool.ruff]
 target-version = "py39"
@@ -49,3 +50,6 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
