--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+"tests/**.py" = ["FBT001"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
