--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ python-json-logger = "^2.0.7"
 ruff = "^0.6.9"
 pytest = "^8.3.3"
 pyright = "^1.1.387"
+pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.24.0"
 
 [tool.ruff]
 target-version = "py39"
