cover sqs supplier message builder with tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ ignore = [
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
-"tests/**.py" = ["FBT001"]
+"tests/**.py" = ["BLE001", "FBT001"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
